updated project structure for posting to save images for the posts within the same directory. The images for the posts were saved separately in previous

--- a/public/posts/83.remove_duplicates_from_sorted_list/83.remove_duplicates_from_sorted_list.md
+++ b/public/posts/83.remove_duplicates_from_sorted_list/83.remove_duplicates_from_sorted_list.md
@@ -6,9 +6,9 @@
 
 - Given the `head` of a sorted linked list, *delete all duplicates such that each element appears only once*. Return *the linked list **sorted** as well*
 
-### Example:
+### Example:v
 
-![leetcode83](/posts/leetcode83.png)
+![leetcode83](/posts/83.remove_duplicates_from_sorted_list/leetcode83.png)
 
 ```
 Input: head = [1,1,2,3,3]
